# Blackline

./: .gitignore  Module.sln  README.md
Injector/: CMakeLists.txt  Injection.cpp  Update.h  Utils.cpp  Utils.h  main.cpp  main.h
Module/: Module.vcxproj  Module.vcxproj.filters  dllmain.cpp
Module/Communication/: NamedPipe.cpp  NamedPipe.hpp
Module/Dependencies/zlib/: zlib.lib
Module/Environment/: Environment.cpp  Environment.hpp  gamehooks.hpp
Module/Environment/Cache/: Cache.h
Module/Environment/Closure/: Closure.h
Module/Environment/Console/: Console.h
Module/Environment/Crypt/: Crypt.h
Module/Environment/Filesystem/: Filesystem.h
Module/Environment/Http/: Http.h
Module/Environment/Instances/: Instances.h
Module/Environment/Metatable/: metatable.h
Module/Environment/Misc/: Misc.h
Module/Environment/Reflection/: Reflection.h
Module/Environment/Scripts/: Scripts.h
Module/Environment/Signals/: Signals.h
Module/Execution/: Execution.cpp  Execution.hpp
Module/Extras/: Extras.cpp  Extras.hpp
Module/Hooks/ControlFlowGuard/: CFG.cpp  CFG.hpp
Module/Hooks/Functions/: functions.hpp
Module/Hooks/Jobs/: JobHooker.cpp  JobHooker.hpp
Module/Hooks/Raknet/: Raknet.cpp  Raknet.hpp
Module/Misc/: Utils.cpp  Utils.hpp
Module/TaskScheduler/: TaskScheduler.cpp  TaskScheduler.hpp
Module/Update/: Offsets.hpp
Module/Update/Protection/: LuaVM.hpp
Server/: package-lock.json  package.json  users.db
Server/client/: package.json  vite.config.ts
Server/client/src/: App.css  App.tsx
Server/src/: db.ts  index.ts  utils.ts
Server/src/routes/: authRoutes.ts
dev-server/: main.py  server.py  ui.py  users.db  utils.py
interface/: package.json
interface/src/: App.css  App.tsx  main.tsx  titlebar.css
interface/src-tauri/: Cargo.toml  tauri.conf.json
interface/src-tauri/src/: accent_colors.rs  alerts.rs  fs_commands.rs  hwid.rs  lib.rs  main.rs  tpm.rs
interface/src/components/: Alert.css  AlertComponent.tsx  AlertContext.tsx
interface/src/components/Editor/: Editor.css  Editor.tsx  (+4 more)
loader/: package.json
loader/src/: App.css  App.tsx
loader/src-tauri/: Cargo.toml  tauri.conf.json
loader/src-tauri/capabilities/: default.json
loader/src-tauri/src/: lib.rs  main.rs
loader/src/components/: Titlebar.css  Titlebar.tsx
(+28 files in other folders)
