[package]
name = "blackline"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "blackline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.45.1", features = ["full"] }
dirs = "6.0.0"
bincode = "1.3"
lz4 = "1.28.1"
rfd = "0.15.3"
sha2 = "0.10.9"
reqwest = "0.12.22"
sysinfo = { version = "0.35.2", features = ["windows"] }
winreg = "0.55.0"
wmi = "0.17.2"
notify = "8.1.0"
windows = { version = "0.61.3", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug"
] }

